--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "advent-of-code-2018"
 version = "0.1.0"
 authors = ["Brian Dawn <brian.t.dawn@gmail.com>"]
+edition = "2018"
 
 [dependencies]
 itertools = "0.7.11"
